--- a/plugins/webgui/public/views/admin/editGroup.html
+++ b/plugins/webgui/public/views/admin/editGroup.html
@@ -1,7 +1,7 @@
 <div layout="column">
     <div flex="15"></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <div style="height: 30px;"></div>
             <form name="groupForm">
@@ -21,7 +21,7 @@
                 </md-input-container>
             </form>
             <div style="width: 100%;" layout="row" layout-align="space-between center">
-                <div flex="75" translate>允许购买多个账号</div>
+                <div flex="75" translate>Multiple account purchases allowed</div>
                 <div flex layout="row" layout-align="end center">
                     <md-switch ng-model="group.multiAccount" aria-label="multiAccount" ng-true-value="1" ng-false-value="0">
                     </md-switch>
