--- a/plugins/webgui/public/views/admin/addGroup.html
+++ b/plugins/webgui/public/views/admin/addGroup.html
@@ -1,27 +1,27 @@
 <div layout="column">
     <div flex="15"></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div ></div>
         <div flex layout="column" layout-align="space-around stretch">
             <div style="height: 30px;"></div>
             <form name="groupForm">
                 <md-input-container class="md-block">
-                    <label>名称</label>
+                    <label>name</label>
                     <input type="text" required name="name" ng-model="group.name">
                     <div ng-messages="groupForm.name.$error">
-                        <div ng-message="required">不能名称为空</div>
+                        <div ng-message="required">name cannot be empty</div>
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
-                    <label>备注</label>
+                    <label>comment</label>
                     <input type="text" required name="comment" ng-model="group.comment">
                     <div ng-messages="groupForm.comment.$error">
-                        <div ng-message="required">备注不能为空</div>
+                        <div ng-message="required">comment cannot be empty</div>
                     </div>
                 </md-input-container>
             </form>
             <div style="width: 100%;" layout="row" layout-align="space-between center">
-                <div flex="75">允许购买多个账号</div>
+                <div flex="75">Multiple account purchases allowed</div>
                 <div flex layout="row" layout-align="end center">
                     <md-switch ng-model="group.multiAccount" aria-label="multiAccount" ng-true-value="1" ng-false-value="0">
                     </md-switch>
@@ -30,7 +30,7 @@
             <md-divider></md-divider>
             <div style="width: 100%; height: 52px;" layout="row" layout-align="space-between center" ng-click="setGroupNotice()">
                 <div flex="75" translate>
-                    <span>公告</span>
+                    <span>notice</span>
                 </div>
                 <div flex layout="row" layout-align="end center">
                     <md-button class="md-icon-button"><md-icon>keyboard_arrow_right</md-icon></md-button>
@@ -39,7 +39,7 @@
             <md-divider></md-divider>
             <div style="width: 100%; height: 52px;" layout="row" layout-align="space-between center" ng-click="setGroupOrder()">
                 <div flex="75" translate>
-                    <span>订单</span>
+                    <span>order</span>
                 </div>
                 <div flex layout="row" layout-align="end center">
                     <md-button class="md-icon-button"><md-icon>keyboard_arrow_right</md-icon></md-button>
@@ -54,8 +54,8 @@
         <div flex layout="row" layout-align="center start">
             <div flex="10" flex-gt-sm="30"></div>
             <div layout="row" flex layout-align="space-around center">
-                <md-button class="md-primary" ng-click="cancel()">取消</md-button>
-                <md-button class="md-raised md-primary" ng-click="confirm()" ng-disabled="!group.name">确认</md-button>
+                <md-button class="md-primary" ng-click="cancel()">cancel</md-button>
+                <md-button class="md-raised md-primary" ng-click="confirm()" ng-disabled="!group.name">confirm</md-button>
             </div>
             <div flex="10" flex-gt-sm="30"></div>
         </div>
