--- a/plugins/webgui/public/views/admin/settings.html
+++ b/plugins/webgui/public/views/admin/settings.html
@@ -12,8 +12,8 @@
             <md-list>
                 <md-list-item ng-click="toSetting(setting.to)">
                     <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                        <div flex="75" translate>{{ setting.name }}</div>
-                        <div flex layout="row" layout-align="end center">
+                        <div translate>{{ setting.name }}</div>
+                        <div layout="row" layout-align="end center">
                             <md-button class="md-primary" ng-click="toSetting(setting.to)"><span translate>点击进入</span>&gt;&gt;</md-button>
                         </div>
                     </div>
