--- a/plugins/webgui/public/views/admin/editNotice.html
+++ b/plugins/webgui/public/views/admin/editNotice.html
@@ -24,7 +24,7 @@
                 <div ng-click="setNoticeGroup()">
                     <div style="width: 100%;" layout="row" layout-align="space-between center">
                         <div flex="75" translate>
-                            <span>分组</span>
+                            <span>group</span>
                         </div>
                         <div flex layout="row" layout-align="end center">
                             <md-button class="md-primary"><md-icon>keyboard_arrow_right</md-icon></md-button>
