--- a/plugins/webgui/public/views/admin/userPage.html
+++ b/plugins/webgui/public/views/admin/userPage.html
@@ -29,7 +29,7 @@
                     <md-divider></md-divider>
                     <md-list-item ng-if="user.ref" ng-click="toRefUser(user.ref.id)">
                         <div flex layout="row" layout-align="space-between center">
-                            <div flex="30">邀请人</div>
+                            <div flex="30">ref.email</div>
                             <div flex="70" style="text-align: right;">{{ user.ref.email }}</div>
                         </div>
                     </md-list-item>
