--- a/plugins/webgui/public/views/dialog/changePassword.html
+++ b/plugins/webgui/public/views/dialog/changePassword.html
@@ -29,10 +29,10 @@
             {{ '取消' | translate }}
         </md-button>
         <md-button class="md-primary" ng-click="publicInfo.changePassword()" ng-if="publicInfo.status === 'show'" ng-disabled="publicInfo.password.length < 6">
-            {{ '确定' | translate }}
+            {{ 'confirm' | translate }}
         </md-button>
         <md-button class="md-primary" ng-click="publicInfo.close()" ng-if="publicInfo.status === 'success' || publicInfo.status === 'error'">
-            {{ '确定' | translate }}
+            {{ 'confirm' | translate }}
         </md-button>
     </md-dialog-actions>
 </md-dialog>
