--- a/plugins/webgui/public/views/dialog/confirm.html
+++ b/plugins/webgui/public/views/dialog/confirm.html
@@ -20,7 +20,7 @@
             {{publicInfo.confirm | translate }}
         </md-button>
         <md-button class="md-primary" ng-click="publicInfo.cancelFn()" ng-show="publicInfo.status === 'error'">
-            {{ '确定' | translate }}
+            {{ 'confirm' | translate }}
         </md-button>
     </md-dialog-actions>
 </md-dialog>
