--- a/plugins/webgui/public/views/dialog/editUserComment.html
+++ b/plugins/webgui/public/views/dialog/editUserComment.html
@@ -25,7 +25,7 @@
           {{ '保存' | translate }}
       </md-button>
       <md-button class="md-primary" ng-click="publicInfo.close()" ng-if="publicInfo.status === 'error'">
-          {{ '确定' | translate }}
+          {{ 'confirm' | translate }}
       </md-button>
   </md-dialog-actions>
 </md-dialog>
