--- a/plugins/webgui/public/views/dialog/pay.html
+++ b/plugins/webgui/public/views/dialog/pay.html
@@ -64,13 +64,13 @@
             {{ '取消' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'giftcard'" ng-click="publicInfo.payByGiftCard()" ng-disabled="!publicInfo.giftCardPassword">
-            {{ '下一步' | translate }}
+            {{ 'next' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'type'" ng-click="publicInfo.close()">
             {{ '取消' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'type'" ng-click="publicInfo.jumpToPayPage()" ng-disabled="!publicInfo.myPayType">
-            {{ '下一步' | translate }}
+            {{ 'next' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'choose'" ng-click="publicInfo.close()">
             {{ '取消' | translate }}
@@ -79,7 +79,7 @@
             {{ publicInfo.selectedOrder.comment ? '详情' : '支付' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'pay' || publicInfo.status === 'success' || publicInfo.status === 'error'" ng-click="publicInfo.close()">
-            {{ '关闭' | translate }}
+            {{ 'close' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'comment'" ng-click="publicInfo.jumpToPayPage()">
             {{ '返回' | translate }}
