--- a/plugins/webgui/public/views/admin/accountSortAndFilterDialog.html
+++ b/plugins/webgui/public/views/admin/accountSortAndFilterDialog.html
@@ -43,7 +43,7 @@
     </md-dialog-content>
     <md-dialog-actions layout="row">
         <md-button class="md-primary" ng-click="publicInfo.hide()">
-            确定
+            confirm
         </md-button>
     </md-dialog-actions>
 </md-dialog>
