--- a/plugins/webgui/public/views/admin/adminPage.html
+++ b/plugins/webgui/public/views/admin/adminPage.html
@@ -29,7 +29,7 @@
                   <md-divider></md-divider>
                   <md-list-item>
                         <div flex layout="row" layout-align="space-between center">
-                            <div flex="30">分组</div>
+                            <div flex="30">group</div>
                             <div flex="70" style="text-align: right;">{{ groupInfo[user.group].name }}</div>
                         </div>
                     </md-list-item>
