--- a/plugins/webgui/public/views/admin/pickAccount.html
+++ b/plugins/webgui/public/views/admin/pickAccount.html
@@ -3,7 +3,7 @@
     <md-dialog-content>
       <div class="md-dialog-content">
         <div layout="row" layout-wrap flex ng-if="account.length === 0">
-          暂无可分配的账号
+          No account available for assignment
         </div>
         <div layout="row" layout-wrap flex ng-if="account.length">
           <div flex="50" flex-gt-md="33" ng-repeat="a in account">
@@ -16,7 +16,7 @@
     </md-dialog-content>
     <md-dialog-actions layout="row">
       <md-button ng-click="confirmAccount()">
-        确定
+        confirm
       </md-button>
     </md-dialog-actions>
   </form>
