--- a/plugins/webgui/public/views/admin/user.html
+++ b/plugins/webgui/public/views/admin/user.html
@@ -1,6 +1,6 @@
-<div ng-if="total === 0" class="zero-element">没有用户<br /><span class="zero-element-link" ng-click="addUser()">点击这里添加</span></div>
+<div ng-if="total === 0" class="zero-element">no user<br /><span class="zero-element-link" ng-click="addUser()">click here to add</span></div>
 <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="user in users track by $index">
+    <div ng-repeat="user in users track by $index">
         <md-card ng-click="toUser(user)" md-colors="{{userColor(user)}}" class="hover-mouse hover-flow">
             <md-card-content>
                 <div layout="row" layout-align="space-between center">
