--- a/plugins/webgui/public/views/dialog/addAccount.html
+++ b/plugins/webgui/public/views/dialog/addAccount.html
@@ -5,29 +5,29 @@
     <form ng-cloak ng-show="publicInfo.status === 'choose' && !publicInfo.isLoading">
         <md-dialog-content>
             <div class="md-dialog-content">
-                <div style="margin-bottom: 20px;">请选择添加账号类型：</div>
+                <div style="margin-bottom: 20px;">Please select the account type to add:</div>
                 <md-radio-group ng-model="publicInfo.accountType">
                     <md-radio-button value="port">
-                        端口
+                        port
                     </md-radio-button>
                     <md-radio-button value="mac">
-                        MAC地址
+                        MAC address
                     </md-radio-button>
                     <md-radio-button value="giftcard" ng-if="publicInfo.isGiftCardUse">
-                        充值码
+                        isGiftCardUse
                     </md-radio-button>
                     <md-radio-button value="refCode" ng-if="publicInfo.isRefCodeUse">
-                        邀请码
+                        isRefCodeUse
                     </md-radio-button>
                 </md-radio-group>
             </div>
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <md-button ng-click="publicInfo.hide()">
-                关闭
+                close
             </md-button>
             <md-button class="md-primary" ng-click="publicInfo.next()">
-                下一步
+                next
             </md-button>
         </md-dialog-actions>
     </form>
@@ -35,7 +35,7 @@
         <md-dialog-content>
             <div class="md-dialog-content">
                 <div layout="row" layout-wrap flex ng-show="publicInfo.account.length === 0">
-                    暂无可分配的账号
+                    No account available for assignment
                 </div>
                 <div layout="row" layout-wrap flex ng-show="publicInfo.account.length">
                     <div flex="50" flex-md="33" flex-gt-md="25" ng-repeat="a in publicInfo.account">
@@ -48,10 +48,10 @@
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <md-button ng-click="publicInfo.hide()">
-                关闭
+                closeose
             </md-button>
             <md-button class="md-primary" ng-click="publicInfo.setPort()">
-                确定
+                confirm
             </md-button>
         </md-dialog-actions>
     </form>
@@ -78,10 +78,10 @@
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <md-button ng-click="publicInfo.hide()">
-                关闭
+                closeose
             </md-button>
             <md-button class="md-primary" ng-click="publicInfo.setMac()" ng-disabled="!publicInfo.isMacAddress(publicInfo.mac.macAddress)">
-                确定
+                confirm
             </md-button>
         </md-dialog-actions>
     </form>
@@ -101,10 +101,10 @@
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <md-button ng-click="publicInfo.hide()">
-                关闭
+                closeose
             </md-button>
             <md-button class="md-primary" ng-click="publicInfo.status = 'giftcardCode'" ng-disabled="!publicInfo.giftcardAccountId">
-                确定
+                confirm
             </md-button>
         </md-dialog-actions>
     </form>
@@ -119,10 +119,10 @@
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <md-button ng-click="publicInfo.hide()">
-                关闭
+                closeose
             </md-button>
             <md-button class="md-primary" ng-click="publicInfo.checkGiftCard()" ng-disabled="!publicInfo.giftcardCode">
-                确定
+                confirm
             </md-button>
         </md-dialog-actions>
     </form>
@@ -141,10 +141,10 @@
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <md-button ng-click="publicInfo.hide()">
-                关闭
+                closeose
             </md-button>
             <md-button class="md-primary" ng-click="publicInfo.addRefCodeForUser()" ng-disabled="!publicInfo.refCodeNumber || !publicInfo.refUserNumber">
-                确定
+                confirm
             </md-button>
         </md-dialog-actions>
     </form>
@@ -171,10 +171,10 @@
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <md-button ng-click="publicInfo.hide()">
-                关闭
+                closeose
             </md-button>
             <md-button class="md-primary" ng-click="publicInfo.editMac()">
-                确定
+                confirm
             </md-button>
         </md-dialog-actions>
     </form>
