--- a/plugins/webgui/public/views/dialog/ban.html
+++ b/plugins/webgui/public/views/dialog/ban.html
@@ -33,7 +33,7 @@
     </md-dialog-content>
     <md-dialog-actions layout="row">
         <md-button class="md-warn" ng-click="publicInfo.ban()">
-            确定
+            confirm
         </md-button>
         <md-button class="md-primary" ng-click="publicInfo.hide()">
             取消
