--- a/plugins/webgui/public/views/dialog/setAccountServer.html
+++ b/plugins/webgui/public/views/dialog/setAccountServer.html
@@ -23,7 +23,7 @@
             </div>
             <div style="height: 30px;"></div>
             <div style="position: absolute; left: 0; right: 0; bottom: 0px; background: #FFF;" flex="100" layout="row" layout-align="center center">
-                <md-button class="md-raised md-primary" ng-click="publicInfo.hide()">确定</md-button>
+                <md-button class="md-raised md-primary" ng-click="publicInfo.hide()">confirm</md-button>
             </div>
         </div>
     </md-dialog-content>
