--- a/plugins/webgui/public/views/admin/accountSetting.html
+++ b/plugins/webgui/public/views/admin/accountSetting.html
@@ -19,7 +19,7 @@
             <md-list ng-show="accountData.accountForNewUser.isEnable">
                 <md-list-item>
                     <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                        <div flex="75" translate>从订单中选择类型</div>
+                        <div flex="75" translate>select type from order</div>
                         <div flex layout="row" layout-align="end center"><md-switch ng-model="accountData.accountForNewUser.fromOrder" aria-label="accountForNewUser"></md-switch></div>
                     </div>
                 </md-list-item>
@@ -30,16 +30,16 @@
                 <div flex>
                     <form name="newAccountForm" ng-if="!accountData.accountForNewUser.fromOrder">
                         <md-input-container class="md-block" style="height: 54px;">
-                            <label>类型</label>
+                            <label>type</label>
                             <md-select ng-model="accountData.accountForNewUser.type">
-                                <md-option ng-value="2">周</md-option>
+                                <md-option ng-value="2">week</md-option>
                                 <md-option ng-value="3">月</md-option>
-                                <md-option ng-value="4">天</md-option>
-                                <md-option ng-value="5">小时</md-option>
+                                <md-option ng-value="4">Day</md-option>
+                                <md-option ng-value="5">Hour</md-option>
                             </md-select>
                         </md-input-container>
                         <md-input-container class="md-block">
-                            <label>流量(MB)</label>
+                            <label>flow(MB)</label>
                             <input type="number" required name="flow" ng-model="accountData.accountForNewUser.flow">
                         </md-input-container>
                         <md-input-container class="md-block">
@@ -49,7 +49,7 @@
                     </form>
                     <form name="newAccountForm" ng-if="accountData.accountForNewUser.fromOrder">
                         <md-input-container class="md-block" style="height: 54px;">
-                            <label>类型</label>
+                            <label>type</label>
                             <md-select ng-model="accountData.accountForNewUser.type">
                                 <md-option ng-value="order.id" ng-repeat="order in orders">{{ order.name }}</md-option>
                             </md-select>
@@ -62,7 +62,7 @@
             <md-list ng-show="accountData.accountForNewUser.isEnable && !accountData.accountForNewUser.fromOrder">
                 <md-list-item>
                     <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                        <div flex="75" translate>合并多服务器流量统计</div>
+                        <div flex="75" translate>Combine multi-server traffic statistics</div>
                         <div flex layout="row" layout-align="end center"><md-switch ng-model="accountData.accountForNewUser.multiServerFlow" aria-label="multiServer"></md-switch></div>
                     </div>
                 </md-list-item>
@@ -71,7 +71,7 @@
             <md-list ng-show="accountData.accountForNewUser.isEnable && !accountData.accountForNewUser.fromOrder">
                 <md-list-item>
                     <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                        <div flex="75" translate>到期自动删除</div>
+                        <div flex="75" translate>Automatically delete when expired</div>
                         <div flex layout="row" layout-align="end center"><md-switch ng-model="accountData.accountForNewUser.autoRemove" aria-label="autoremove"></md-switch></div>
                     </div>
                 </md-list-item>
