--- a/plugins/webgui/public/views/admin/addRefUser.html
+++ b/plugins/webgui/public/views/admin/addRefUser.html
@@ -1,7 +1,7 @@
 <div layout="column">
-    <div flex="15"></div>
+    <div></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <div style="height: 30px;"></div>
             <form name="accountForm">
@@ -50,14 +50,14 @@
                 <div style="height: 30px;"></div>
             </form>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div flex layout="row" layout-align="center start">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div layout="row" flex layout-align="space-around center">
-            <md-button class="md-primary" ng-click="cancel()">取消</md-button>
-            <md-button class="md-raised md-primary" ng-click="confirm()" ng-disabled="!sourceUser.selectedItem || !refUser.selectedItem || !sourceUserCode">确认</md-button>
+            <md-button class="md-primary" ng-click="cancel()">cancel</md-button>
+            <md-button class="md-raised md-primary" ng-click="confirm()" ng-disabled="!sourceUser.selectedItem || !refUser.selectedItem || !sourceUserCode">confirm</md-button>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
 </div>
