--- a/plugins/webgui/public/views/admin/editPayment.html
+++ b/plugins/webgui/public/views/admin/editPayment.html
@@ -22,7 +22,7 @@
                                 <input type="number" required name="paypal" ng-model="paymentData.paypal">
                             </md-input-container>
                             <md-input-container class="md-block" flex="100">
-                                <label>流量（MB）</label>
+                                <label>flow（MB）</label>
                                 <input type="number" required name="flow" ng-model="paymentData.flow">
                             </md-input-container>
                             <md-input-container class="md-block" flex="100">
@@ -41,7 +41,7 @@
                 <md-list>
                     <md-list-item>
                         <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                            <div flex="75" translate>到期自动删除</div>
+                            <div flex="75" translate>Automatically delete when expired</div>
                             <div flex layout="row" layout-align="end center">
                                 <md-switch ng-model="paymentData.autoRemove" aria-label="autoRemove"></md-switch>
                             </div>
@@ -52,7 +52,7 @@
                 <md-list>
                     <md-list-item>
                         <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                            <div flex="75" translate>合并多服务器流量统计</div>
+                            <div flex="75" translate>Combine multi-server traffic statistics</div>
                             <div flex layout="row" layout-align="end center">
                                 <md-switch ng-model="paymentData.multiServerFlow" aria-label="multiServerFlow"></md-switch>
                             </div>
