--- a/plugins/webgui/public/views/admin/userSortDialog.html
+++ b/plugins/webgui/public/views/admin/userSortDialog.html
@@ -18,10 +18,10 @@
             </div>
             <div style="margin-bottom: 20px;">user type:</div>
             <div layout="row" layout-align="center stretch">
-                <div flex="15"></div>
+                <div></div>
                 <md-checkbox flex="35" ng-model="userSort.type.normal">usually</md-checkbox>
                 <md-checkbox flex="35" ng-model="userSort.type.admin">administrator</md-checkbox>
-                <div flex="15"></div>
+                <div></div>
             </div>
             <div style="margin-bottom: 0px;" ng-if="publicInfo.id === 1">grouping:</div>
             <div layout="row" layout-align="center stretch" ng-if="publicInfo.id === 1">
