--- a/plugins/webgui/public/views/dialog/addAccount.html
+++ b/plugins/webgui/public/views/dialog/addAccount.html
@@ -63,7 +63,7 @@
                     <input type="text" required name="macAddress" ng-model="publicInfo.mac.macAddress">
                 </md-input-container>
                 <md-input-container class="md-block" style="height: 54px;">
-                    <label>端口</label>
+                    <label>port</label>
                     <md-select ng-model="publicInfo.mac.account">
                         <md-option ng-value="account.id" ng-repeat="account in publicInfo.account">{{ account.port }}</md-option>
                     </md-select>
@@ -156,7 +156,7 @@
                     <input type="text" required name="macAddress" ng-model="publicInfo.mac.macAddress">
                 </md-input-container>
                 <md-input-container class="md-block" style="height: 54px;">
-                    <label>端口</label>
+                    <label>port</label>
                     <md-select ng-model="publicInfo.mac.account">
                         <md-option ng-value="account.id" ng-repeat="account in publicInfo.account">{{ account.port }}</md-option>
                     </md-select>
