--- a/plugins/webgui/public/views/dialog/addMacAccount.html
+++ b/plugins/webgui/public/views/dialog/addMacAccount.html
@@ -16,7 +16,7 @@
   </md-dialog-content>
   <md-dialog-actions layout="row" ng-hide="publicInfo.isLoading">
     <md-button class="md-primary" ng-click="publicInfo.addMac()" translate>
-      确认
+      confirm
     </md-button>
   </md-dialog-actions>
 </md-dialog>
