--- a/plugins/webgui/public/views/dialog/ban.html
+++ b/plugins/webgui/public/views/dialog/ban.html
@@ -36,7 +36,7 @@
             confirm
         </md-button>
         <md-button class="md-primary" ng-click="publicInfo.hide()">
-            取消
+            cancel
         </md-button>
     </md-dialog-actions>
 </md-dialog>
