--- a/plugins/webgui/public/views/dialog/setCurrentAccount.html
+++ b/plugins/webgui/public/views/dialog/setCurrentAccount.html
@@ -4,7 +4,7 @@
             <div layout="column" layout-wrap flex>
                 <div layout="column" layout-align="center stretch">
                     <md-checkbox ng-model="publicInfo.changeCurrentAccount.flow" aria-label="flow">
-                        流量
+                        flow
                     </md-checkbox>
                 </div>
                 <div layout="column" layout-align="center stretch">
@@ -14,7 +14,7 @@
                 </div>
                 <div layout="column" layout-align="center stretch">
                     <md-checkbox ng-model="publicInfo.changeCurrentAccount.autoRemove" aria-label="autoRemove">
-                        到期自动删除
+                        Automatically delete when expired
                     </md-checkbox>
                 </div>
             </div>
