--- a/plugins/webgui/public/views/dialog/subscribe.html
+++ b/plugins/webgui/public/views/dialog/subscribe.html
@@ -24,7 +24,7 @@
                 若更换链接，原有的订阅链接将失效，是否继续？
                 <md-dialog-actions layout="row" layout-align="center center" style="margin-top: 25px;">
                     <md-button class="md-primary" ng-click="publicInfo.updateSubscribePage = false">
-                        取消
+                        cancel
                     </md-button>
                     <md-button class="md-primary" ng-click="publicInfo.updateLink()">
                         继续
