--- a/plugins/webgui/public/views/home/resetPassword.html
+++ b/plugins/webgui/public/views/home/resetPassword.html
@@ -1,14 +1,14 @@
 <div layout="column" hide-gt-sm>
-    <div flex="15" style="height: 40px;"></div>
+    <div style="height: 40px;"></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <form name="userForm">
                 <md-input-container class="md-block">
                     <label>{{ '新密码' | translate }}</label>
                     <input type="password" required name="password" ng-model="user.password" md-autofocus>
                     <div ng-messages="userForm.password.$error">
-                        <div ng-message="required">{{ '密码不能为空' | translate }}</div>
+                        <div ng-message="required">{{ 'password不能为空' | translate }}</div>
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
@@ -20,14 +20,14 @@
                 </md-input-container>
             </form>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div flex layout="row" layout-align="center start">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div layout="row" flex layout-align="space-around center">
             <md-button class="md-raised md-primary" ng-click="resetPassword()" ng-disabled="!user.password || user.password !== user.passwordAgain">重置密码</md-button>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
 </div>
 <div layout="column" hide-xs hide-sm>
