--- a/plugins/webgui/public/views/skin/fs_sample.html
+++ b/plugins/webgui/public/views/skin/fs_sample.html
@@ -10,16 +10,16 @@
   <div class="skin_menu">
     <div layout="row" layout-align="center center">
       <div flex>
-        <a href="/home/login">登录</a>
+        <a href="/home/login">Sign in</a>
       </div>
       <div flex>
-        <a href="/home/signup">注册</a>
+        <a href="/home/signup">Sign up</a>
       </div>
     </div>
   </div>
   <div class="skin_line_short"></div>
   <div class="skin_circle"></div>
-  <div flex="15"></div>
+  <div></div>
 </div>
 
 <style>
