--- a/plugins/webgui/public/views/admin/account.html
+++ b/plugins/webgui/public/views/admin/account.html
@@ -1,7 +1,7 @@
 <!-- <div style="margin: 10px 10px 5px 10px; font-size: 0.8em; color: #555" ng-show="total">共 {{ total }} 个</div> -->
-<div ng-if="total === 0" class="zero-element">没有账号<br /><span class="zero-element-link" ng-if="id === 1" ng-click="addAccount()">点击这里添加</span></div>
+<div ng-if="total === 0" class="zero-element">No account<br /><span class="zero-element-link" ng-if="id === 1" ng-click="addAccount()">click here to add</span></div>
 <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="a in account track by $index">
+    <div  ng-repeat="a in account track by $index">
         <md-card ng-click="toAccount(a)" md-colors="{{ accountColor(a) }}" class="hover-mouse hover-flow">
             <md-card-content>
                 <div layout="row" layout-align="space-between center" style="word-break: keep-all; white-space:nowrap; overflow: hidden; text-overflow:ellipsis;">
@@ -15,7 +15,7 @@
             </md-card-content>
         </md-card>
     </div>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" in-view="view($inview)" ng-if="account.length && !isAccountPageFinish">
+    <div in-view="view($inview)" ng-if="account.length && !isAccountPageFinish">
         <md-card>
             <md-card-content>
                 <div layout="row" layout-align="center center">
