--- a/plugins/webgui/public/views/admin/addGroup.html
+++ b/plugins/webgui/public/views/admin/addGroup.html
@@ -1,5 +1,5 @@
 <div layout="column">
-    <div flex="15"></div>
+    <div></div>
     <div flex layout="row">
         <div ></div>
         <div flex layout="column" layout-align="space-around stretch">
@@ -47,17 +47,17 @@
             </div>
             <md-divider></md-divider>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div style="height: 50px;"></div>
     <div class="bottom-nav">
         <div flex layout="row" layout-align="center start">
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
             <div layout="row" flex layout-align="space-around center">
                 <md-button class="md-primary" ng-click="cancel()">cancel</md-button>
                 <md-button class="md-raised md-primary" ng-click="confirm()" ng-disabled="!group.name">confirm</md-button>
             </div>
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
         </div>
     </div>
 </div>
