--- a/plugins/webgui/public/views/admin/addServer.html
+++ b/plugins/webgui/public/views/admin/addServer.html
@@ -1,7 +1,7 @@
 <div layout="column">
-    <div flex="15"></div>
+    <div></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <div style="height: 30px;"></div>
             <form name="serverForm">
@@ -31,14 +31,14 @@
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
-                    <label>端口</label>
+                    <label>port</label>
                     <input type="number" required name="port" ng-model="server.port">
                     <div ng-messages="serverForm.port.$error">
                         <div ng-message="required">端口不能为空</div>
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
-                    <label>密码</label>
+                    <label>password</label>
                     <input type="text" required name="password" ng-model="server.password">
                     <div ng-messages="serverForm.password.$error">
                         <div ng-message="required">密码不能为空</div>
@@ -77,7 +77,7 @@
                     </md-autocomplete>
                 </div>
                 <md-input-container class="md-block">
-                    <label>流量倍率</label>
+                    <label>server.scale:</label>
                     <input type="text" required name="scale" ng-model="server.scale">
                     <div ng-messages="serverForm.scale.$error">
                         <div ng-message="required">流量倍率不能为空</div>
@@ -112,17 +112,17 @@
                 </div>
             </form>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div style="height: 50px;"></div>
     <div class="bottom-nav">
         <div flex layout="row" layout-align="center start">
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
             <div layout="row" flex layout-align="space-around center">
-                <md-button class="md-primary" ng-click="cancel()">取消</md-button>
-                <md-button class="md-raised md-primary" ng-click="confirm()">确认</md-button>
+                <md-button class="md-primary" ng-click="cancel()">cancel</md-button>
+                <md-button class="md-raised md-primary" ng-click="confirm()">confirm</md-button>
             </div>
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
         </div>
     </div>
 </div>
