--- a/plugins/webgui/public/views/admin/addUser.html
+++ b/plugins/webgui/public/views/admin/addUser.html
@@ -1,7 +1,7 @@
 <div layout="column">
-    <div flex="15"></div>
+    <div></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <div style="height: 30px;"></div>
             <form name="userForm">
@@ -17,7 +17,7 @@
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
-                    <label translate>密码</label>
+                    <label translate>password</label>
                     <input type="password" required name="password" ng-model="user.password">
                     <div ng-messages="userForm.password.$error">
                         <div ng-message="required" translate>密码不能为空</div>
@@ -25,14 +25,14 @@
                 </md-input-container>
             </form>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div flex layout="row" layout-align="center start">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div layout="row" flex layout-align="space-around center">
-            <md-button class="md-primary" ng-click="cancel()"><span translate>取消</span></md-button>
-            <md-button class="md-raised md-primary" ng-click="confirm()"><span translate>确认</span></md-button>
+            <md-button class="md-primary" ng-click="cancel()"><span translate>cancel</span></md-button>
+            <md-button class="md-raised md-primary" ng-click="confirm()"><span translate>confirm</span></md-button>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
 </div>
