--- a/plugins/webgui/public/views/admin/changePassword.html
+++ b/plugins/webgui/public/views/admin/changePassword.html
@@ -1,7 +1,7 @@
 <div layout="column">
-  <div flex="15"></div>
+  <div></div>
   <div flex layout="row">
-      <div flex="10" flex-gt-sm="30"></div>
+      <div></div>
       <div flex layout="column" layout-align="space-around stretch">
           <div style="height: 30px;"></div>
           修改登录密码
@@ -29,13 +29,13 @@
               </md-input-container>
           </form>
       </div>
-      <div flex="10" flex-gt-sm="30"></div>
+      <div></div>
   </div>
   <div flex layout="row" layout-align="center start">
-      <div flex="10" flex-gt-sm="30"></div>
+      <div></div>
       <div layout="row" flex layout-align="space-around center">
-          <md-button class="md-raised md-primary" ng-disabled="!data.newPassword || data.newPassword !== data.newPasswordAgain" ng-click="confirm()" translate>确认</md-button>
+          <md-button class="md-raised md-primary" ng-disabled="!data.newPassword || data.newPassword !== data.newPasswordAgain" ng-click="confirm()" translate>confirm</md-button>
       </div>
-      <div flex="10" flex-gt-sm="30"></div>
+      <div></div>
   </div>
 </div>
