--- a/plugins/webgui/public/views/admin/editGroup.html
+++ b/plugins/webgui/public/views/admin/editGroup.html
@@ -1,5 +1,5 @@
 <div layout="column">
-    <div flex="15"></div>
+    <div></div>
     <div flex layout="row">
         <div></div>
         <div flex layout="column" layout-align="space-around stretch">
@@ -47,18 +47,18 @@
             </div>
             <md-divider></md-divider>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div style="height: 50px;"></div>
     <div class="bottom-nav">
         <div flex layout="row" layout-align="center start">
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
             <div layout="row" flex layout-align="space-around center">
-                <md-button class="md-primary" ng-click="cancel()"><span translate>取消</span></md-button>
-                <md-button class="md-warn" ng-click="delete()" ng-disabled="groupId === 0"><span translate>删除</span></md-button>
-                <md-button class="md-raised md-primary" ng-click="confirm()"><span translate>确认</span></md-button>
+                <md-button class="md-primary" ng-click="cancel()"><span translate>cancel</span></md-button>
+                <md-button class="md-warn" ng-click="delete()" ng-disabled="groupId === 0"><span translate>delete</span></md-button>
+                <md-button class="md-raised md-primary" ng-click="confirm()"><span translate>confirm</span></md-button>
             </div>
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
         </div>
     </div>
 </div>
