--- a/plugins/webgui/public/views/admin/editNotice.html
+++ b/plugins/webgui/public/views/admin/editNotice.html
@@ -38,12 +38,12 @@
 </md-card>
 <div class="bottom-nav">
     <div flex layout="row" layout-align="center start">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div layout="row" flex layout-align="space-around center">
-            <md-button class="md-raised md-warn" ng-click="delete()">删除</md-button>
+            <md-button class="md-raised md-warn" ng-click="delete()">delete</md-button>
             <md-button class="md-raised" ng-click="preview()" ng-disabled="!notice.title || !notice.content">预览</md-button>
             <md-button class="md-raised md-primary" ng-click="save()">保存</md-button>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
 </div>
