--- a/plugins/webgui/public/views/admin/editOrder.html
+++ b/plugins/webgui/public/views/admin/editOrder.html
@@ -6,9 +6,9 @@
     <div flex style="height: 180px;"></div>
 </div>
 <div layout="column" ng-show="orderInfoLoaded">
-    <div flex="15"></div>
+    <div></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <div style="height: 30px;"></div>
             <form name="orderForm">
@@ -36,7 +36,7 @@
                 </md-input-container>
                 <div layout="row" layout-align="space-between start" ng-hide="order.baseId">
                     <md-input-container class="md-block" flex="45">
-                        <label translate>类型</label>
+                        <label translate>type</label>
                         <div layout="row">
                             <md-select ng-model="order.type" style="width: 100%;">
                                 <md-option ng-repeat="type in typeList" value="{{type.value}}" translate>{{type.key}}</md-option>
@@ -60,7 +60,7 @@
                 </div>
                 <div layout="row" layout-align="space-between center" ng-hide="order.baseId">
                     <md-input-container class="md-block" flex="45">
-                        <label translate>流量</label>
+                        <label translate>flow</label>
                         <input type="text" name="flow" ng-model="order.flowStr">
                     </md-input-container>
                     <md-input-container class="md-block" flex="45">
@@ -70,13 +70,13 @@
                 </div>
                 <div layout="row" layout-align="space-between center" ng-show="order.baseId">
                         <md-input-container class="md-block" flex="100">
-                            <label translate>流量</label>
+                            <label translate>flow</label>
                             <input type="text" name="flow" ng-model="order.flowStr">
                         </md-input-container>
                     </div>
                 <div layout="row" layout-align="space-between center" ng-hide="order.baseId">
                     <md-input-container class="md-block" flex="45">
-                        <label translate>自动删除延迟</label>
+                        <label translate>Automatically remove delays</label>
                         <input type="text" name="autoRemoveDelay" ng-model="order.autoRemoveDelayStr" ng-disabled="!order.autoRemove">
                     </md-input-container>
                     <md-input-container class="md-block" flex="45">
@@ -86,14 +86,14 @@
                 </div>
             </form>
             <div style="width: 100%;" layout="row" layout-align="space-between center" ng-hide="order.baseId">
-                <div flex="75">到期自动删除</div>
+                <div flex="75">Automatically delete when expired</div>
                 <div flex layout="row" layout-align="end center">
                     <md-switch ng-model="order.autoRemove" aria-label="autoRemove" ng-true-value="1" ng-false-value="0">
                     </md-switch>
                 </div>
             </div>
             <div style="width: 100%;" layout="row" layout-align="space-between center" ng-hide="order.baseId">
-                <div flex="75">合并多服务器流量统计</div>
+                <div flex="75">Combine multi-server traffic statistics</div>
                 <div flex layout="row" layout-align="end center">
                     <md-switch ng-model="order.multiServerFlow" aria-label="multiServerFlow" ng-true-value="1" ng-false-value="0">
                     </md-switch>
@@ -117,7 +117,7 @@
             <div ng-click="setOrderServer()" ng-hide="order.baseId">
                 <div style="width: 100%;" layout="row" layout-align="space-between center">
                     <div flex="75" translate>
-                        <span>自定义服务器&nbsp;</span><span style="color: #777">[{{ order.orderServer ? orderServer.length : '∞' }}]</span>
+                        <span>custom server&nbsp;</span><span style="color: #777">[{{ order.orderServer ? orderServer.length : '∞' }}]</span>
                     </div>
                     <div flex layout="row" layout-align="end center">
                         <md-button class="md-icon-button"><md-icon>keyboard_arrow_right</md-icon></md-button>
@@ -148,18 +148,18 @@
             </div>
             <md-divider></md-divider>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div style="height: 50px;"></div>
     <div class="bottom-nav">
         <div flex layout="row" layout-align="center start">
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
             <div layout="row" flex layout-align="space-around center">
-                <md-button class="md-primary" ng-click="cancel()">取消</md-button>
-                <md-button class="md-warn" ng-click="delete()">删除</md-button>
-                <md-button class="md-raised md-primary" ng-click="confirm()">确认</md-button>
+                <md-button class="md-primary" ng-click="cancel()">cancel</md-button>
+                <md-button class="md-warn" ng-click="delete()">delete</md-button>
+                <md-button class="md-raised md-primary" ng-click="confirm()">confirm</md-button>
             </div>
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
         </div>
     </div>
 </div>
