--- a/plugins/webgui/public/views/admin/editServer.html
+++ b/plugins/webgui/public/views/admin/editServer.html
@@ -1,7 +1,7 @@
 <div layout="column" ng-show="serverInfoloaded">
-    <div flex="15"></div>
+    <div></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <div style="height: 30px;"></div>
             <form name="serverForm">
@@ -31,14 +31,14 @@
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
-                    <label translate>端口</label>
+                    <label translate>port</label>
                     <input type="text" required name="port" ng-model="server.port">
                     <div ng-messages="serverForm.port.$error">
                         <div ng-message="required">端口不能为空</div>
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
-                    <label translate>密码</label>
+                    <label translate>password</label>
                     <input type="text" required name="password" ng-model="server.password">
                     <div ng-messages="serverForm.password.$error">
                         <div ng-message="required">密码不能为空</div>
@@ -77,7 +77,7 @@
                     </md-autocomplete>
                 </div>
                 <md-input-container class="md-block">
-                    <label translate>流量倍率</label>
+                    <label translate>server.scale:</label>
                     <input type="text" required name="scale" ng-model="server.scale">
                     <div ng-messages="serverForm.scale.$error">
                         <div ng-message="required" translate>流量倍率不能为空</div>
@@ -118,18 +118,18 @@
                 </div>
             </form>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div style="height: 50px;"></div>
     <div class="bottom-nav">
         <div flex layout="row" layout-align="center start">
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
             <div layout="row" flex layout-align="space-around center">
-                <md-button class="md-primary" ng-click="cancel()"><span translate>取消</span></md-button>
-                <md-button class="md-warn" ng-click="deleteServer()" translate><span translate>删除</span></md-button>
-                <md-button class="md-raised md-primary" ng-click="confirm()" translate><span translate>确认</span></md-button>
+                <md-button class="md-primary" ng-click="cancel()"><span translate>cancel</span></md-button>
+                <md-button class="md-warn" ng-click="deleteServer()" translate><span translate>delete</span></md-button>
+                <md-button class="md-raised md-primary" ng-click="confirm()" translate><span translate>confirm</span></md-button>
             </div>
-            <div flex="10" flex-gt-sm="30"></div>
+            <div></div>
         </div>
     </div>
 </div>
