--- a/plugins/webgui/public/views/admin/serverPage.html
+++ b/plugins/webgui/public/views/admin/serverPage.html
@@ -12,9 +12,9 @@
                     <div layout="column" layout-align="center center">
                         <div layout="row" layout-align="center center" style="margin-bottom: 15px;">
                             <md-radio-group ng-model="flowType" ng-change="getChartData()" layout="row" layout-align="center center">
-                                <md-radio-button value="hour"><span translate>时</span></md-radio-button>
-                                <md-radio-button value="day"><span translate>天</span></md-radio-button>
-                                <md-radio-button value="week"><span translate>周</span></md-radio-button>
+                                <md-radio-button value="hour"><span translate>Hour</span></md-radio-button>
+                                <md-radio-button value="day"><span translate>Day</span></md-radio-button>
+                                <md-radio-button value="week"><span translate>week</span></md-radio-button>
                             </md-radio-group>
                         </div>
                         <div>
