--- a/plugins/webgui/public/views/app/login.html
+++ b/plugins/webgui/public/views/app/login.html
@@ -14,14 +14,14 @@
       </md-input-container>
       <div layout="row">
         <md-input-container class="md-block" flex="65">
-          <label>{{ '密码' | translate }}</label>
+          <label>{{ 'password' | translate }}</label>
           <input type="password" required name="password" ng-model="user.password" ng-keypress="enterKey($event)">
         </md-input-container>
         <div flex layout="row" layout-align="space-between center">
           <div flex="5"></div>
           <div style="margin-bottom: 25px;">
             <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">
-              {{ '登录' | translate }}</md-button>
+              {{ 'Sign in' | translate }}</md-button>
           </div>
         </div>
       </div>
