--- a/plugins/webgui/public/views/dialog/changePassword.html
+++ b/plugins/webgui/public/views/dialog/changePassword.html
@@ -7,7 +7,7 @@
             <div layout="row" layout-align="center center" ng-if="publicInfo.status === 'show'">
                 <form name="passwordForm">
                     <md-input-container class="md-block">
-                        <label translate>密码</label>
+                        <label translate>password</label>
                         <input type="text" required name="password" ng-model="publicInfo.password">
                         <div ng-messages="passwordForm.password.$error">
                             <div ng-message="required" translate>密码不能为空</div>
@@ -26,7 +26,7 @@
     </md-dialog-content>
     <md-dialog-actions layout="row" layout-align="center center" ng-if="publicInfo.status !== 'loading'">
         <md-button class="md-primary" ng-click="publicInfo.close()" ng-if="publicInfo.status === 'show'">
-            {{ '取消' | translate }}
+            {{ 'cancel' | translate }}
         </md-button>
         <md-button class="md-primary" ng-click="publicInfo.changePassword()" ng-if="publicInfo.status === 'show'" ng-disabled="publicInfo.password.length < 6">
             {{ 'confirm' | translate }}
