--- a/plugins/webgui/public/views/dialog/pay.html
+++ b/plugins/webgui/public/views/dialog/pay.html
@@ -61,19 +61,19 @@
     </md-dialog-content>
     <md-dialog-actions layout="row" layout-align="center center" ng-show="publicInfo.status !== 'loading'">
         <md-button class="md-primary" ng-show="publicInfo.status === 'giftcard'" ng-click="publicInfo.close()">
-            {{ '取消' | translate }}
+            {{ 'cancel' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'giftcard'" ng-click="publicInfo.payByGiftCard()" ng-disabled="!publicInfo.giftCardPassword">
             {{ 'next' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'type'" ng-click="publicInfo.close()">
-            {{ '取消' | translate }}
+            {{ 'cancel' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'type'" ng-click="publicInfo.jumpToPayPage()" ng-disabled="!publicInfo.myPayType">
             {{ 'next' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'choose'" ng-click="publicInfo.close()">
-            {{ '取消' | translate }}
+            {{ 'cancel' | translate }}
         </md-button>
         <md-button class="md-primary" ng-show="publicInfo.status === 'choose'" ng-click="publicInfo.showComment()" ng-disabled="!publicInfo.orderId">
             {{ publicInfo.selectedOrder.comment ? '详情' : '支付' | translate }}
