--- a/plugins/webgui/public/views/dialog/setAccountServer.html
+++ b/plugins/webgui/public/views/dialog/setAccountServer.html
@@ -2,7 +2,7 @@
     <md-dialog-content>
         <div class="md-dialog-content">
             <div layout="row" layout-align="space-between center">
-                <div flex="75">自定义服务器&nbsp;[{{ publicInfo.account.server ? publicInfo.account.server.length : '∞' }}]</div>
+                <div flex="75">custom server&nbsp;[{{ publicInfo.account.server ? publicInfo.account.server.length : '∞' }}]</div>
                 <div flex layout="row" layout-align="end center">
                     <md-switch ng-model="publicInfo.account.accountServer" aria-label="accountServer">
                     </md-switch>
