--- a/plugins/webgui/public/views/home/login.html
+++ b/plugins/webgui/public/views/home/login.html
@@ -1,7 +1,7 @@
 <div layout="column" hide-gt-sm>
-    <div flex="15" style="height: 40px;"></div>
+    <div style="height: 40px;"></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="column" layout-align="space-around stretch">
             <form name="userForm">
                 <md-input-container class="md-block">
@@ -14,28 +14,28 @@
                 </md-input-container>
                 <div layout="row">
                     <md-input-container class="md-block" flex="65">
-                        <label>{{ '密码' | translate }}</label>
+                        <label>{{ 'password' | translate }}</label>
                         <input type="password" required name="password" ng-model="user.password" ng-keypress="enterKey($event)">
                     </md-input-container>
                     <div flex layout="row" layout-align="space-between center">
                         <div flex="5"></div>
                         <div style="margin-bottom: 25px;">
-                            <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ '登录' | translate }}</md-button>
+                            <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ 'Sign in' | translate }}</md-button>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div flex layout="row" layout-align="center start">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div layout="row" flex layout-align="space-around center">
             <md-button class="md-primary" ng-click="findPassword()">{{ '找回密码' | translate }}</md-button>
             <md-button class="md-primary" ng-click="socialLogin()" ng-disabled="!hasSocialLogin">{{ '社交账号登录' | translate }}</md-button>
-            <!-- <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ '登录' | translate }}</md-button> -->
+            <!-- <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ 'Sign in' | translate }}</md-button> -->
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
 </div>
 <div layout="column" hide-xs hide-sm>
@@ -63,13 +63,13 @@
                                 </md-input-container>
                                 <div layout="row">
                                     <md-input-container class="md-block" flex="65">
-                                        <label>{{ '密码' | translate }}</label>
+                                        <label>{{ 'password' | translate }}</label>
                                         <input type="password" required name="password" ng-model="user.password" ng-keypress="enterKey($event)">
                                     </md-input-container>
                                     <div flex layout="row" layout-align="space-between center">
                                         <div flex="5"></div>
                                         <div style="margin-bottom: 25px;">
-                                            <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ '登录' | translate }}</md-button>
+                                            <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ 'Sign in' | translate }}</md-button>
                                         </div>
                                     </div>
                                 </div>
@@ -82,7 +82,7 @@
                         <div layout="row" flex layout-align="space-around center">
                             <md-button class="md-primary" ng-click="findPassword()">{{ '找回密码' | translate }}</md-button>
                             <md-button class="md-primary" ng-click="socialLogin()" ng-disabled="!hasSocialLogin">{{ '社交账号登录' | translate }}</md-button>
-                            <!-- <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ '登录' | translate }}</md-button> -->
+                            <!-- <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ 'Sign in' | translate }}</md-button> -->
                         </div>
                         <div flex="10"></div>
                     </div>
