--- a/plugins/webgui/public/views/home/social.html
+++ b/plugins/webgui/public/views/home/social.html
@@ -1,7 +1,7 @@
 <div layout="column" hide-gt-sm>
-    <div flex="15" style="height: 40px;"></div>
+    <div style="height: 40px;"></div>
     <div flex layout="row">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div flex layout="row" layout-align="center center">
             <div class="social-buttons-mobile" layout="row" layout-align="center center">
                 <div><img class="social-button" src="/libs/google-brands.svg" ng-click="google()"></div>
@@ -10,15 +10,15 @@
                 <div><img class="social-button" src="/libs/twitter-brands.svg" ng-click="twitter()"></div>
             </div>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
     <div flex layout="row" layout-align="center start">
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
         <div layout="row" flex layout-align="space-around center">
             <div></div>
             <md-button class="md-primary" ng-click="back()" translate>返回</md-button>
         </div>
-        <div flex="10" flex-gt-sm="30"></div>
+        <div></div>
     </div>
 </div>
 <div layout="column" hide-xs hide-sm>
