--- a/plugins/webgui/public/views/skin/bing.html
+++ b/plugins/webgui/public/views/skin/bing.html
@@ -3,10 +3,10 @@
   </div>
   <div layout="row" layout-align="space-around center" style="background-color: #eee; width: 100%;">
       <md-button hide-gt-sm ng-click="login()" translate>
-          登录
+          Sign in
       </md-button>
       <md-button hide-gt-sm ng-click="signup()" translate>
-          注册
+          Sign up
       </md-button>
   </div>
 </div>
