--- a/plugins/webgui/public/views/user/account.html
+++ b/plugins/webgui/public/views/user/account.html
@@ -67,7 +67,7 @@
                             <md-divider ng-hide="config.simple"></md-divider>
                             <md-list-item ng-show="isSS(a.serverInfo) && !config.simple">
                                 <div flex layout="row" layout-align="space-between center">
-                                    <div flex="40" translate>密码：</div>
+                                    <div flex="40" translate>password：</div>
                                     <div flex="60" style="text-align:right">{{a.password}}</div>
                                 </div>
                             </md-list-item>
@@ -120,7 +120,7 @@
                             <md-divider></md-divider>
                             <md-list-item>
                                 <div flex layout="row" layout-align="space-between center">
-                                    <div flex="40">{{ '流量倍率：' | translate }}</div>
+                                    <div flex="40">{{ 'server.scale:：' | translate }}</div>
                                     <div flex="60" style="text-align:right">{{ a.serverInfo.scale }}</div>
                                 </div>
                             </md-list-item>
@@ -171,9 +171,9 @@
                 </div>
                 <md-button class="md-primary" ng-click="showChangePasswordDialog(a.id, a.password)" ng-if="!config.simple">{{ '修改密码' | translate }}</md-button>
                 <md-button class="md-primary" ng-show="config.alipay || config.paypal || config.giftcard" ng-if="a.type >= 2 && a.type <= 5" ng-click="createOrder(a)">{{ '续费' | translate }}</md-button>
-                <md-button class="md-primary" ng-click="showQrcodeDialog(a.serverInfo, a)" ng-show="isSS(a.serverInfo)" ng-if="!config.simple">{{ '账号二维码' | translate }}</md-button>
-                <md-button class="md-primary" ng-click="showWireGuard(a.serverInfo, a)" ng-show="isWG(a.serverInfo)" ng-if="!config.simple">{{ '账号二维码' | translate }}</md-button>
-                <md-button class="md-primary" ng-click="showQrcodeDialog(a.serverInfo, a)" ng-show="isTJ(a.serverInfo)" ng-if="!config.simple">{{ '账号二维码' | translate }}</md-button>
+                <md-button class="md-primary" ng-click="showQrcodeDialog(a.serverInfo, a)" ng-show="isSS(a.serverInfo)" ng-if="!config.simple">{{ 'account QR code' | translate }}</md-button>
+                <md-button class="md-primary" ng-click="showWireGuard(a.serverInfo, a)" ng-show="isWG(a.serverInfo)" ng-if="!config.simple">{{ 'account QR code' | translate }}</md-button>
+                <md-button class="md-primary" ng-click="showQrcodeDialog(a.serverInfo, a)" ng-show="isTJ(a.serverInfo)" ng-if="!config.simple">{{ 'account QR code' | translate }}</md-button>
                 <md-button class="md-primary" ng-click="subscribe(a.id)" ng-if="config.subscribe">{{ '订阅链接' | translate }}</md-button>
             </md-card-content>
         </md-card>
